fix: resolve some error for get all posters
